--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello world
+<html>
+<head>
+	<title>Muhamad Bayu Wilanda</title>
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#">Menu 1</a></li>
+				<li><a href="#">Menu 2</a></li>
+				<li><a href="#">Menu 3</a></li>
+			</ul>
+		</nav>
+	</header>
+</body>
+</html>
