--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <html>
 <head>
 	<title>Muhamad Bayu Wilanda</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
 		<nav>
+			<div class="title">
+				{ Muhamad Bayu Wilanda}
+			</div>
 			<ul>
-				<li><a href="#">Menu 1</a></li>
-				<li><a href="#">Menu 2</a></li>
-				<li><a href="#">Menu 3</a></li>
+				<li><a href="#">/home</a></li>
+				<li><a href="#">/portofolio</a></li>
+				<li><a href="#">/contact</a></li>
 			</ul>
 		</nav>
+		<h1>/home</h1>
 	</header>
+
+	<section>
+		
+	</section>
+
+	<footer>
+		
+	</footer>
 </body>
 </html>
