--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Muhamad Bayu Wilanda</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 	<header>
@@ -15,7 +15,7 @@
 				<li><a href="#">/contact</a></li>
 			</ul>
 		</nav>
-		<h1>/home</h1>
+		
 	</header>
 
 	<section>
