--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
 <head>
 	<title>Muhamad Bayu Wilanda</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="css/home.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/typed.min.js"></script>
 </head>
 <body>
 	<header>
 		<nav>
 			<div class="title">
-				{ Muhamad Bayu Wilanda}
+				{ Muhamad Bayu Wilanda }
 			</div>
 			<ul>
 				<li><a href="#">/home</a></li>
@@ -15,7 +18,22 @@
 				<li><a href="#">/contact</a></li>
 			</ul>
 		</nav>
-		
+		<div class="intro">
+			<div class="text-body">
+				<span id="typed"></span>
+			</div>
+		</div>
+		<script>
+			$(function(){
+				$("#typed").typed({
+					strings: ["Hai! Perkenalkan, nama saya Muhamad Bayu Wilanda .", "Saya biasa dipanggil Bayu.", "Ini adalah website portofolio saya.","Silakan klik link <a href='#' style='color:white'>ini</a>, untuk melihat portofolio saya.<br>Terimakasih :)"],
+					typeSpeed: 100,
+			  callback: function(){
+				shift();
+			  }
+				});
+			});
+		</script>
 	</header>
 
 	<section>
