--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	
+	<!-- <meta http-equiv="Refresh" content="0; URL=maintenance.html"> -->
+	<script>setTimeout("location.href='maintenance.html'",0)</script>
 	<title>Muhamad Bayu Wilanda</title>
 	<link rel="stylesheet" href="css/home.css">
 	<script src="js/jquery.min.js"></script>
