--- a/maintenance.html
+++ b/maintenance.html
@@ -5,8 +5,10 @@
 		
 		<style>
 			.text-body {
-				margin: 300px auto;
+				margin: 200px auto;
 				text-align: center;
+				font-family: ubuntu;
+				font-size: 30px;
 			}
 		</style>
 	</head>
