--- a/maintenance.html
+++ b/maintenance.html
@@ -74,7 +74,7 @@
 		<script>
 			$(function(){
 				$("#typed").typed({
-					strings: ["Maaaaf, belum selesai. :(<br>Sabar yaa :)<p>{ Muhamad Bayu Wilanda }"],
+					strings: ["Maaaaf, belum selesai. :(<br>Sabar yaa :)<p>{ Muhamad Bayu Wilanda }</p>"],
 					typeSpeed: 50,
 			  callback: function(){
 				shift();
