--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<!-- <meta http-equiv="Refresh" content="0; URL=maintenance.html"> -->
-	<script>setTimeout("location.href='maintenance.html'",0)</script>
 	<title>Muhamad Bayu Wilanda</title>
 	<link rel="stylesheet" href="css/home.css">
 	<script src="js/jquery.min.js"></script>
@@ -42,9 +40,9 @@
 
 	<section>
 		<article id="about" class="about">
-			<h1>#about</h1>
+<!-- 			<h1>#about</h1>
 			<hr>
-			<!-- <p>Muhamad Bayu Wilanda saat ini sedang menempuh pendidikan S1-nya dengan jurusan Sistem Informasi di Univeristas Gunadarma, Depok.</p> -->
+			<!-- <p>Muhamad Bayu Wilanda saat ini sedang menempuh pendidikan S1-nya dengan jurusan Sistem Informasi di Univeristas Gunadarma, Depok.</p> --> -->
 		</article>
 	</section>
 
