--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<script>
 			$(function(){
 				$("#typed").typed({
-					strings: ["Hai! Perkenalkan, nama saya Muhamad Bayu Wilanda.", "Saya biasa dipanggil Bayu.", "Ini adalah website portofolio saya.","Sayangnya website ini belum <i>sempurna</i>, dan dalam tahap pengerjaan :(","Sabar ya :)","Salam kenal! :)"],
+					strings: ["Hai! Perkenalkan, nama saya Muhamad Bayu Wilanda.", "Saya biasa dipanggil Bayu.", "Ini adalah website portofolio saya.","Sayangnya website statis ini belum <i>sempurna</i>, dan dalam tahap pengerjaan :(","Sabar ya :)","Salam kenal! :)"],
 					typeSpeed: 50,
 			  callback: function(){
 				shift();
@@ -42,7 +42,7 @@
 		<article id="about" class="about">
 <!-- 			<h1>#about</h1>
 			<hr>
-			<!-- <p>Muhamad Bayu Wilanda saat ini sedang menempuh pendidikan S1-nya dengan jurusan Sistem Informasi di Univeristas Gunadarma, Depok.</p> --> -->
+			<p>Muhamad Bayu Wilanda saat ini sedang menempuh pendidikan S1-nya dengan jurusan Sistem Informasi di Univeristas Gunadarma, Depok.</p> -->
 		</article>
 	</section>
 
